tests/unit-fail-compilation/j083a.c.ref
j083a.c:2:17: error: Invalid initializer for aggregate type.

    Undefined behavior (UB-CDI3):
        see C11 section 6.7.9:16 http://rvdoc.org/C11/6.7.9
        see C11 section J.2:1 item 83 http://rvdoc.org/C11/J.2
        see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
        see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1

Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
